--- a/src/ui/src/TodoApp.css
+++ b/src/ui/src/TodoApp.css
@@ -1,10 +1,14 @@
 body {
-  background-color: #78C2AD;
+  background-color: #78c2ad;
   /* background-color: 'white'; */
 }
 
 .App {
   text-align: center;
+}
+
+.details-text {
+  color: white;
 }
 
 .App-logo {
@@ -26,6 +30,10 @@ body {
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
